--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,99 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{34: 1,\n",
-       " 44: 1,\n",
-       " 36: 1,\n",
-       " 10: 1,\n",
-       " 19: 1,\n",
-       " 77: 1,\n",
-       " 96: 1,\n",
-       " 71: 1,\n",
-       " 43: 1,\n",
-       " 26: 1,\n",
-       " 32: 1,\n",
-       " 80: 1,\n",
-       " 22: 1,\n",
-       " 74: 1,\n",
-       " 7: 1,\n",
-       " 94: 1,\n",
-       " 47: 1,\n",
-       " 54: 1,\n",
-       " 23: 1,\n",
-       " 6: 1,\n",
-       " 62: 1,\n",
-       " 24: 1,\n",
-       " 42: 1,\n",
-       " 25: 1,\n",
-       " 84: 1,\n",
-       " 17: 1,\n",
-       " 76: 1,\n",
-       " 16: 1,\n",
-       " 2: 1,\n",
-       " 79: 1,\n",
-       " 28: 1,\n",
-       " 21: 1,\n",
-       " 78: 1,\n",
-       " 87: 1,\n",
-       " 89: 1,\n",
-       " 92: 1,\n",
-       " 39: 1,\n",
-       " 48: 1,\n",
-       " 53: 1,\n",
-       " 60: 1,\n",
-       " 45: 1,\n",
-       " 14: 1,\n",
-       " 20: 1,\n",
-       " 83: 1,\n",
-       " 12: 1,\n",
-       " 95: 1,\n",
-       " 46: 1,\n",
-       " 59: 1,\n",
-       " 37: 1,\n",
-       " 97: 1,\n",
-       " 85: 1,\n",
-       " 52: 1,\n",
-       " 0: 1,\n",
-       " 65: 1,\n",
-       " 27: 1,\n",
-       " 93: 1,\n",
-       " 18: 1,\n",
-       " 81: 1,\n",
-       " 11: 1,\n",
-       " 69: 1,\n",
-       " 41: 1,\n",
-       " 61: 1,\n",
-       " 91: 1,\n",
-       " 51: 1,\n",
-       " 68: 1,\n",
-       " 86: 1,\n",
-       " 29: 1,\n",
-       " 40: 1,\n",
-       " 8: 1,\n",
-       " 88: 1,\n",
-       " 63: 1,\n",
-       " 9: 1,\n",
-       " 67: 1,\n",
-       " 49: 1,\n",
-       " 98: 1,\n",
-       " 73: 1,\n",
-       " 4: 1,\n",
-       " 72: 1,\n",
-       " 31: 1,\n",
-       " 75: 1}"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "sample_list_1 = random.sample(range(100),k=80)\n"
@@ -469,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,16 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{7, 16, 17, 21, 26, 41, 44, 54, 60, 62, 65, 71, 76, 77, 78, 89, 93, 94}"
+       "{7, 21, 23, 31, 36, 37, 42, 49, 52, 61, 65, 67, 81, 86, 99}"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,16 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1, 3, 5, 13, 15, 30, 33, 38, 50, 55, 56, 57, 58, 64, 66, 82, 90, 99}"
+       "{9, 11, 12, 13, 24, 34, 39, 43, 62, 68, 71, 73, 76, 92, 94}"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,11 +529,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3.union(set4,set5) == set1.union(set2, set5)"
    ]
   },
   {
@@ -947,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,38 +903,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'builtin_function_or_method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-191-89fd5a4c9db0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mword_freq2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mword_freq2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mword_freq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "{'a': 8,\n",
+       " 'about': 1,\n",
+       " 'all': 1,\n",
+       " 'although': 3,\n",
+       " 'and': 23,\n",
+       " 'are': 1,\n",
+       " 'at': 1,\n",
+       " 'baby': 14,\n",
+       " 'backseat': 1,\n",
+       " 'bag': 1,\n",
+       " 'bar': 1,\n",
+       " 'be': 16,\n",
+       " 'bedsheets': 3,\n",
+       " 'begin': 1,\n",
+       " 'best': 1,\n",
+       " 'body': 17,\n",
+       " 'boy': 2,\n",
+       " 'brand': 6,\n",
+       " 'can': 1,\n",
+       " 'chance': 1,\n",
+       " 'club': 1,\n",
+       " 'come': 37,\n",
+       " 'conversation': 1,\n",
+       " 'crazy': 2,\n",
+       " 'dance': 1,\n",
+       " 'date': 1,\n",
+       " 'day': 6,\n",
+       " 'discovering': 6,\n",
+       " 'do': 3,\n",
+       " 'doing': 2,\n",
+       " \"don't\": 2,\n",
+       " 'drinking': 1,\n",
+       " 'driver': 1,\n",
+       " 'eat': 1,\n",
+       " 'every': 6,\n",
+       " 'falling': 3,\n",
+       " 'family': 1,\n",
+       " 'fast': 1,\n",
+       " 'fill': 2,\n",
+       " 'find': 1,\n",
+       " 'first': 1,\n",
+       " 'follow': 6,\n",
+       " 'for': 3,\n",
+       " 'friends': 1,\n",
+       " 'get': 1,\n",
+       " 'girl': 2,\n",
+       " 'give': 1,\n",
+       " 'go': 2,\n",
+       " 'going': 1,\n",
+       " 'grab': 2,\n",
+       " 'hand': 1,\n",
+       " 'handmade': 2,\n",
+       " 'heart': 3,\n",
+       " 'hours': 2,\n",
+       " 'how': 1,\n",
+       " 'i': 6,\n",
+       " \"i'll\": 1,\n",
+       " \"i'm\": 23,\n",
+       " 'in': 27,\n",
+       " 'is': 5,\n",
+       " \"isn't\": 1,\n",
+       " 'it': 1,\n",
+       " 'jukebox': 1,\n",
+       " 'just': 1,\n",
+       " 'kiss': 1,\n",
+       " 'know': 2,\n",
+       " 'last': 3,\n",
+       " 'lead': 6,\n",
+       " 'leave': 1,\n",
+       " 'let': 1,\n",
+       " \"let's\": 2,\n",
+       " 'like': 10,\n",
+       " 'love': 25,\n",
+       " 'lover': 1,\n",
+       " 'magnet': 3,\n",
+       " 'make': 1,\n",
+       " 'man': 1,\n",
+       " 'may': 2,\n",
+       " 'me': 10,\n",
+       " 'mind': 2,\n",
+       " 'much': 2,\n",
+       " 'my': 33,\n",
+       " 'new': 6,\n",
+       " 'night': 3,\n",
+       " 'not': 2,\n",
+       " 'now': 11,\n",
+       " 'of': 6,\n",
+       " 'okay': 1,\n",
+       " 'on': 40,\n",
+       " 'one': 1,\n",
+       " 'our': 1,\n",
+       " 'out': 1,\n",
+       " 'over': 1,\n",
+       " 'place': 1,\n",
+       " 'plate': 1,\n",
+       " 'play': 1,\n",
+       " 'pull': 3,\n",
+       " 'push': 3,\n",
+       " 'put': 3,\n",
+       " 'radio': 1,\n",
+       " 'room': 3,\n",
+       " 'say': 2,\n",
+       " 'shape': 6,\n",
+       " 'shots': 1,\n",
+       " 'singing': 2,\n",
+       " 'slow': 1,\n",
+       " 'smell': 3,\n",
+       " 'so': 2,\n",
+       " 'somebody': 2,\n",
+       " 'something': 6,\n",
+       " 'sour': 1,\n",
+       " 'start': 2,\n",
+       " 'stop': 1,\n",
+       " 'story': 1,\n",
+       " 'sweet': 1,\n",
+       " 'table': 1,\n",
+       " 'take': 1,\n",
+       " 'talk': 4,\n",
+       " 'taxi': 1,\n",
+       " 'tell': 1,\n",
+       " 'that': 2,\n",
+       " 'the': 18,\n",
+       " 'then': 3,\n",
+       " 'thrifty': 1,\n",
+       " 'to': 2,\n",
+       " 'too': 5,\n",
+       " 'trust': 1,\n",
+       " 'up': 3,\n",
+       " 'van': 1,\n",
+       " 'waist': 2,\n",
+       " 'want': 2,\n",
+       " 'was': 2,\n",
+       " 'we': 7,\n",
+       " \"we're\": 1,\n",
+       " 'week': 1,\n",
+       " 'were': 3,\n",
+       " 'where': 1,\n",
+       " 'with': 22,\n",
+       " 'you': 16,\n",
+       " 'your': 21}"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "keys = []\n",
-    "for k in word_freq.keys():\n",
-    "    keys.append(k)\n",
-    "keys.sort()\n",
-    "word_freq2 = []\n",
-    "for k in keys:\n",
-    "    word_freq2.append[word_freq[k]]"
+    "word_freq2 = sorted(word_freq.items())\n",
+    "dict(word_freq2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1048,12 +1096,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'conversation': 1,\n",
+       " \"we're\": 1,\n",
+       " 'plate': 1,\n",
+       " 'sour': 1,\n",
+       " 'jukebox': 1,\n",
+       " 'taxi': 1,\n",
+       " 'fast': 1,\n",
+       " 'bag': 1,\n",
+       " 'man': 1,\n",
+       " 'going': 1,\n",
+       " 'one': 1,\n",
+       " 'backseat': 1,\n",
+       " 'friends': 1,\n",
+       " 'take': 1,\n",
+       " 'play': 1,\n",
+       " 'okay': 1,\n",
+       " 'begin': 1,\n",
+       " 'over': 1,\n",
+       " 'just': 1,\n",
+       " 'are': 1,\n",
+       " 'tell': 1,\n",
+       " 'drinking': 1,\n",
+       " 'our': 1,\n",
+       " 'where': 1,\n",
+       " \"i'll\": 1,\n",
+       " 'all': 1,\n",
+       " \"isn't\": 1,\n",
+       " 'make': 1,\n",
+       " 'lover': 1,\n",
+       " 'get': 1,\n",
+       " 'radio': 1,\n",
+       " 'give': 1,\n",
+       " 'can': 1,\n",
+       " 'club': 1,\n",
+       " 'it': 1,\n",
+       " 'out': 1,\n",
+       " 'chance': 1,\n",
+       " 'first': 1,\n",
+       " 'table': 1,\n",
+       " 'thrifty': 1,\n",
+       " 'driver': 1,\n",
+       " 'slow': 1,\n",
+       " 'dance': 1,\n",
+       " 'trust': 1,\n",
+       " 'family': 1,\n",
+       " 'week': 1,\n",
+       " 'date': 1,\n",
+       " 'leave': 1,\n",
+       " 'at': 1,\n",
+       " 'hand': 1,\n",
+       " 'how': 1,\n",
+       " 'eat': 1,\n",
+       " 'about': 1,\n",
+       " 'story': 1,\n",
+       " 'sweet': 1,\n",
+       " 'best': 1,\n",
+       " 'let': 1,\n",
+       " 'van': 1,\n",
+       " 'shots': 1,\n",
+       " 'place': 1,\n",
+       " 'find': 1,\n",
+       " 'kiss': 1,\n",
+       " 'stop': 1,\n",
+       " 'bar': 1,\n",
+       " \"don't\": 2,\n",
+       " 'mind': 2,\n",
+       " 'know': 2,\n",
+       " 'so': 2,\n",
+       " 'start': 2,\n",
+       " 'boy': 2,\n",
+       " 'girl': 2,\n",
+       " 'singing': 2,\n",
+       " 'doing': 2,\n",
+       " 'somebody': 2,\n",
+       " 'handmade': 2,\n",
+       " 'may': 2,\n",
+       " 'that': 2,\n",
+       " 'much': 2,\n",
+       " 'grab': 2,\n",
+       " 'was': 2,\n",
+       " 'say': 2,\n",
+       " 'waist': 2,\n",
+       " 'want': 2,\n",
+       " \"let's\": 2,\n",
+       " 'not': 2,\n",
+       " 'crazy': 2,\n",
+       " 'go': 2,\n",
+       " 'to': 2,\n",
+       " 'fill': 2,\n",
+       " 'hours': 2,\n",
+       " 'push': 3,\n",
+       " 'then': 3,\n",
+       " 'put': 3,\n",
+       " 'room': 3,\n",
+       " 'magnet': 3,\n",
+       " 'up': 3,\n",
+       " 'pull': 3,\n",
+       " 'last': 3,\n",
+       " 'do': 3,\n",
+       " 'smell': 3,\n",
+       " 'although': 3,\n",
+       " 'falling': 3,\n",
+       " 'were': 3,\n",
+       " 'night': 3,\n",
+       " 'heart': 3,\n",
+       " 'for': 3,\n",
+       " 'bedsheets': 3,\n",
+       " 'talk': 4,\n",
+       " 'too': 5,\n",
+       " 'is': 5,\n",
+       " 'every': 6,\n",
+       " 'new': 6,\n",
+       " 'follow': 6,\n",
+       " 'brand': 6,\n",
+       " 'of': 6,\n",
+       " 'i': 6,\n",
+       " 'day': 6,\n",
+       " 'lead': 6,\n",
+       " 'shape': 6,\n",
+       " 'discovering': 6,\n",
+       " 'something': 6,\n",
+       " 'we': 7,\n",
+       " 'a': 8,\n",
+       " 'like': 10,\n",
+       " 'me': 10,\n",
+       " 'now': 11,\n",
+       " 'baby': 14,\n",
+       " 'you': 16,\n",
+       " 'be': 16,\n",
+       " 'body': 17,\n",
+       " 'the': 18,\n",
+       " 'your': 21,\n",
+       " 'with': 22,\n",
+       " \"i'm\": 23,\n",
+       " 'and': 23,\n",
+       " 'love': 25,\n",
+       " 'in': 27,\n",
+       " 'my': 33,\n",
+       " 'come': 37,\n",
+       " 'on': 40}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "import operator\n",
+    "sorted_tups = sorted(word_freq.items(), key=operator.itemgetter(1))\n",
+    "word_freq2 = []\n",
+    "for i in sorted_tups:\n",
+    "    word_freq2.append(list(i))\n",
+    "dict(word_freq2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
