--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -43,11 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "type(tup)\n"
    ]
   },
   {
@@ -65,13 +76,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtup\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mn\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mh\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mk\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "tup.append('r', 'o', 'n','h','a','c','k')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "#Tuples are inmutables"
    ]
   },
   {
@@ -89,13 +121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('i', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "list1= list(tup)\n",
+    "list2= [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "for i in range(len(list2)):\n",
+    "    list1.append(list2[i])\n",
+    "tup=tuple(list1)\n",
+    "print(tup)\n",
+    "\n"
    ]
   },
   {
@@ -113,11 +157,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('i', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup1 = []\n",
+    "tup2 = []\n",
+    "for i in range(len(list1)):\n",
+    "    if i < 4:\n",
+    "        tup1.append(list1[i])\n",
+    "    elif i >= 4:\n",
+    "        tup2.append(list1[i])\n",
+    "print(tuple(tup1))\n",
+    "print(tuple(tup2))\n"
    ]
   },
   {
@@ -131,11 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('i', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+      "('i', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3= tup1 +tup2\n",
+    "\n",
+    "print(tuple(tup3))\n",
+    "print(tup)\n"
    ]
   },
   {
@@ -147,11 +220,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "len(tup1) +len(tup2)==len(tup3)\n"
    ]
   },
   {
@@ -163,11 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3.index('h')"
    ]
   },
   {
@@ -187,11 +282,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is in both\n",
+      "c is in both\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(i,\"is in both\")\n"
    ]
   },
   {
@@ -205,11 +312,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "for i in letters:\n",
+    "    print(tup3.count(i))\n"
    ]
   },
   {
@@ -225,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,11 +370,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[79, 32, 84, 4, 49, 68, 7, 43, 76, 51, 30, 50, 42, 18, 94, 71, 11, 58, 53, 59, 57, 19, 67, 70, 22, 85, 75, 99, 66, 15, 16, 98, 17, 35, 82, 87, 14, 72, 91, 38, 74, 40, 54, 25, 47, 55, 93, 8, 5, 24, 88, 37, 62, 95, 6, 0, 9, 33, 89, 45, 29, 56, 64, 39, 44, 77, 1, 46, 3, 96, 27, 61, 83, 41, 60, 86, 73, 20, 78, 23]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "sample_list_1=random.sample(range(100),80)\n",
+    "print(sample_list_1) "
    ]
   },
   {
@@ -266,11 +395,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1=set(sample_list_1)\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -289,11 +427,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[48, 97, 44, 59, 45, 2, 67, 20, 76, 80, 79, 59, 21, 98, 9, 93, 46, 37, 44, 15, 55, 18, 16, 57, 18, 64, 15, 2, 45, 32, 60, 55, 44, 86, 37, 94, 76, 85, 15, 52, 46, 68, 79, 54, 26, 9, 57, 0, 7, 65, 93, 78, 38, 21, 32, 33, 13, 69, 49, 45, 19, 17, 52, 68, 64, 45, 25, 39, 42, 43, 6, 20, 3, 71, 60, 24, 60, 92, 64, 70]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "sample_list_2=[]\n",
+    "for i in range (80):\n",
+    "    x=random.randrange(100)\n",
+    "    sample_list_2.append(x)\n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -305,11 +455,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set2=set(sample_list_2)\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -321,11 +480,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 4, 5, 8, 11, 14, 22, 23, 27, 29, 30, 35, 40, 41, 47, 50, 51, 53, 56, 58, 61, 62, 66, 72, 73, 74, 75, 77, 82, 83, 84, 87, 88, 89, 91, 95, 96, 99}\n",
+      "38\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set3= set1-(set1 & set2)\n",
+    "print(set3)\n"
    ]
   },
   {
@@ -337,11 +506,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{65, 2, 97, 69, 13, 48, 80, 52, 21, 26, 92}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set4= set2 -(set1 & set2)\n",
+    "print(set4)"
    ]
   },
   {
@@ -353,11 +531,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 3, 6, 7, 9, 15, 16, 17, 18, 19, 20, 24, 25, 32, 33, 37, 38, 39, 42, 43, 44, 45, 46, 49, 54, 55, 57, 59, 60, 64, 67, 68, 70, 71, 76, 78, 79, 85, 86, 93, 94, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set5= set1 & set2\n",
+    "print(set5)"
    ]
   },
   {
@@ -377,11 +564,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "len(set3)+len(set4)+len(set5)==len(set1)+len(set2)-len(set5)"
    ]
   },
   {
@@ -393,11 +591,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "set6=set()\n"
    ]
   },
   {
@@ -409,11 +607,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 4, 5, 6, 7, 8, 9, 11, 14, 15, 16, 17, 18, 19, 20, 22, 23, 24, 25, 27, 29, 30, 32, 33, 35, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 49, 50, 51, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 64, 66, 67, 68, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 82, 83, 84, 85, 86, 87, 88, 89, 91, 93, 94, 95, 96, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set6.update(set3,set5)\n",
+    "\n",
+    "print(set6)"
    ]
   },
   {
@@ -425,11 +633,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1== set6"
    ]
   },
   {
@@ -441,11 +660,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1.issubset(set2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set1.issubset(set3)"
    ]
   },
   {
@@ -457,11 +707,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 4, 5, 8, 11, 14, 22, 23, 27, 29, 30, 35, 40, 41, 47, 50, 51, 53, 56, 58, 61, 62, 66, 72, 73, 74, 75, 77, 82, 83, 84, 87, 88, 89, 91, 95, 96, 99}\n",
+      "{0, 1, 3, 4, 5, 6, 7, 8, 9, 11, 14, 15, 16, 17, 18, 19, 20, 22, 23, 24, 25, 27, 29, 30, 32, 33, 35, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 49, 50, 51, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 64, 66, 67, 68, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 82, 83, 84, 85, 86, 87, 88, 89, 91, 93, 94, 95, 96, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set3.union(set4,set5)\n",
+    "print(set3)\n",
+    "set1.union(set2)\n",
+    "print(set1)"
    ]
   },
   {
@@ -473,11 +735,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "x=set3.union(set4,set5)\n",
+    "y=set1.union(set2)\n",
+    "x==y"
    ]
   },
   {
@@ -489,18 +764,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1.pop()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Remove every element in the following list from `set1` if they are present in the set. Print the remaining elements.\n",
+    "# Remove every element in the following list from set1` if they are present in the set. Print the remaining elements.\n",
     "\n",
     "```\n",
     "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
@@ -509,11 +795,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 6, 7, 13, 15, 16, 17, 18, 20, 21, 24, 25, 26, 32, 33, 37, 38, 42, 43, 44, 45, 46, 48, 52, 54, 55, 57, 60, 64, 65, 67, 68, 69, 70, 76, 78, 80, 85, 86, 92, 93, 94, 97, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "x = set1 & set(list_to_remove)\n",
+    "y = set2 - x\n",
+    "print(y)"
    ]
   },
   {
@@ -531,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,11 +862,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 8,\n",
+       " 'about': 1,\n",
+       " 'all': 1,\n",
+       " 'although': 3,\n",
+       " 'and': 23,\n",
+       " 'are': 1,\n",
+       " 'at': 1,\n",
+       " 'baby': 14,\n",
+       " 'backseat': 1,\n",
+       " 'bag': 1,\n",
+       " 'bar': 1,\n",
+       " 'be': 16,\n",
+       " 'bedsheets': 3,\n",
+       " 'begin': 1,\n",
+       " 'best': 1,\n",
+       " 'body': 17,\n",
+       " 'boy': 2,\n",
+       " 'brand': 6,\n",
+       " 'can': 1,\n",
+       " 'chance': 1,\n",
+       " 'club': 1,\n",
+       " 'come': 37,\n",
+       " 'conversation': 1,\n",
+       " 'crazy': 2,\n",
+       " 'dance': 1,\n",
+       " 'date': 1,\n",
+       " 'day': 6,\n",
+       " 'discovering': 6,\n",
+       " 'do': 3,\n",
+       " 'doing': 2,\n",
+       " \"don't\": 2,\n",
+       " 'drinking': 1,\n",
+       " 'driver': 1,\n",
+       " 'eat': 1,\n",
+       " 'every': 6,\n",
+       " 'falling': 3,\n",
+       " 'family': 1,\n",
+       " 'fast': 1,\n",
+       " 'fill': 2,\n",
+       " 'find': 1,\n",
+       " 'first': 1,\n",
+       " 'follow': 6,\n",
+       " 'for': 3,\n",
+       " 'friends': 1,\n",
+       " 'get': 1,\n",
+       " 'girl': 2,\n",
+       " 'give': 1,\n",
+       " 'go': 2,\n",
+       " 'going': 1,\n",
+       " 'grab': 2,\n",
+       " 'hand': 1,\n",
+       " 'handmade': 2,\n",
+       " 'heart': 3,\n",
+       " 'hours': 2,\n",
+       " 'how': 1,\n",
+       " 'i': 6,\n",
+       " \"i'll\": 1,\n",
+       " \"i'm\": 23,\n",
+       " 'in': 27,\n",
+       " 'is': 5,\n",
+       " \"isn't\": 1,\n",
+       " 'it': 1,\n",
+       " 'jukebox': 1,\n",
+       " 'just': 1,\n",
+       " 'kiss': 1,\n",
+       " 'know': 2,\n",
+       " 'last': 3,\n",
+       " 'lead': 6,\n",
+       " 'leave': 1,\n",
+       " 'let': 1,\n",
+       " \"let's\": 2,\n",
+       " 'like': 10,\n",
+       " 'love': 25,\n",
+       " 'lover': 1,\n",
+       " 'magnet': 3,\n",
+       " 'make': 1,\n",
+       " 'man': 1,\n",
+       " 'may': 2,\n",
+       " 'me': 10,\n",
+       " 'mind': 2,\n",
+       " 'much': 2,\n",
+       " 'my': 33,\n",
+       " 'new': 6,\n",
+       " 'night': 3,\n",
+       " 'not': 2,\n",
+       " 'now': 11,\n",
+       " 'of': 6,\n",
+       " 'okay': 1,\n",
+       " 'on': 40,\n",
+       " 'one': 1,\n",
+       " 'our': 1,\n",
+       " 'out': 1,\n",
+       " 'over': 1,\n",
+       " 'place': 1,\n",
+       " 'plate': 1,\n",
+       " 'play': 1,\n",
+       " 'pull': 3,\n",
+       " 'push': 3,\n",
+       " 'put': 3,\n",
+       " 'radio': 1,\n",
+       " 'room': 3,\n",
+       " 'say': 2,\n",
+       " 'shape': 6,\n",
+       " 'shots': 1,\n",
+       " 'singing': 2,\n",
+       " 'slow': 1,\n",
+       " 'smell': 3,\n",
+       " 'so': 2,\n",
+       " 'somebody': 2,\n",
+       " 'something': 6,\n",
+       " 'sour': 1,\n",
+       " 'start': 2,\n",
+       " 'stop': 1,\n",
+       " 'story': 1,\n",
+       " 'sweet': 1,\n",
+       " 'table': 1,\n",
+       " 'take': 1,\n",
+       " 'talk': 4,\n",
+       " 'taxi': 1,\n",
+       " 'tell': 1,\n",
+       " 'that': 2,\n",
+       " 'the': 18,\n",
+       " 'then': 3,\n",
+       " 'thrifty': 1,\n",
+       " 'to': 2,\n",
+       " 'too': 5,\n",
+       " 'trust': 1,\n",
+       " 'up': 3,\n",
+       " 'van': 1,\n",
+       " 'waist': 2,\n",
+       " 'want': 2,\n",
+       " 'was': 2,\n",
+       " 'we': 7,\n",
+       " \"we're\": 1,\n",
+       " 'week': 1,\n",
+       " 'were': 3,\n",
+       " 'where': 1,\n",
+       " 'with': 22,\n",
+       " 'you': 16,\n",
+       " 'your': 21}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "keys=[]\n",
+    "keys=list(word_freq.keys())\n",
+    "keys.sort()\n",
+    "word_freq2={}\n",
+    "for i in keys:\n",
+    "    word_freq2[i]=word_freq[i]\n",
+    "word_freq2\n"
    ]
   },
   {
